--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -124,6 +124,7 @@ body {
     color: #eee;
     background: #333;
     transition: .3s;
+    cursor: pointer;
 
     &:hover {
       background: #777;
